crates/keron-lang/tests/corpus/errors/check/fn_duplicate_arg.keron
fn f(a: Int, b: Int): Int {
  a + b
}

val x: Int = f(1, 2, a = 3)
